--- a/B-What you need to choose/PKD code.htm
+++ b/B-What you need to choose/PKD code.htm
@@ -204,8 +204,6 @@
                                                     </button>
                                                 </div>
                                             </div>
-                                            <ul class="nocontent menu _Skins_SideMenu mc-component" data-mc-is-context-sensitive="True" data-mc-linked-toc="Data/Tocs/TOC_for_HTML.js" data-mc-side-menu="True" data-mc-max-depth="1" data-mc-include-icon="False" data-mc-include-indicator="False" data-mc-include-children="True" data-mc-include-siblings="True" data-mc-include-parent="True" data-mc-toc="True">
-                                            </ul>
                                         </div>
                                         <p>&#160;</p>
                                         <p>&#160;</p>
@@ -219,7 +217,7 @@
                                                 <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
                                                 <p style="text-align: justify;">You must choose a major code describing your core business. You can also choose several additional codes</p>
                                             </div>
-                                            <p style="text-align: justify;">When registering your business, you will need to choose at least one code of business activity according to <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term6">Polska Klasyfikacja Działalności<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Polska Klasyfikacja Działalności, or PKD,  is a Polish system of business activity classification corresponding to the NACE used in the UE.</span></a> , or PKD.</p>
+                                            <p style="text-align: justify;">When registering your business, you will need to choose at least one code of business activity according to <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term6">Polska Klasyfikacja Działalności<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Polska Klasyfikacja Działalności, or PKD,  is a Polish system of business activity classification corresponding to the NACE used in the UE.</span></a>, or PKD.</p>
                                             <p style="text-align: justify;">The codes are used for statistical purposes, but they also have some practical significance. They are associated with specific forms of taxation, VAT requirement, or the requirement to use a fiscal register.</p>
                                             <p style="text-align: justify;">You should choose one main code for your business activity, describing your main business area that will generate the majority of your revenues.</p>
                                             <p style="text-align: justify;">Additionally, you can choose as many additional codes as you want. These will correspond to the activities that you perform, but are not your major activity.</p>
@@ -231,7 +229,7 @@
                                             <p style="text-align: justify;">If you change the scope or nature of your business, you are required to update the codes within 7 days of such change. See here for details.</p>
                                             <div class="Remember">
                                                 <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span> </p>
-                                                <p style="text-align: justify;">Certain codes are reserved for individual farmers or for commercial law companies, and you cannot choose them. Always check the <a href="https://www.biznes.gov.pl/pl/tabela-pkd">PKD website</a>..</p>
+                                                <p style="text-align: justify;">Certain codes are reserved for individual farmers or for commercial law companies, and you cannot choose them. Always check the <a href="https://www.biznes.gov.pl/pl/tabela-pkd">PKD website</a>.</p>
                                             </div>
                                             <h2>Where to find the codes</h2>
                                             <p style="text-align: justify;">Use the search page available at&#160;<a href="https://www.biznes.gov.pl/pl/tabela-pkd">Biznes.gov.pl</a></p>
