--- a/HomeHTML.htm
+++ b/HomeHTML.htm
@@ -118,18 +118,20 @@
                                             <div class="topic-hero">&#160;</div>
                                         </div>
                                         <div class="footer center">
-                                            <div class="home-master-page-footer">
-                                                <div>
-                                                    <p>&#160;</p>
-                                                </div>
-                                                <div>
-                                                    <p>
-                                                        <img src="Resources/Images/Assets/Icons/MainIcons/Contact-white.png" />
-                                                    </p>
-                                                    <p><span class="mc-variable General.Email variable">afabisiak@hotmail.com</span>
-                                                    </p>
-                                                    <p>&#160;</p>
-                                                    <p>&#160;</p>
+                                            <div>
+                                                <p>
+                                                    <img src="Resources/Images/Assets/Icons/MainIcons/Contact-white.png" />
+                                                </p>
+                                                <p><span class="mc-variable General.Email variable">fabisiak.agnieszka@gmail.com</span>
+                                                </p>
+                                                <p>
+                                                    <img src="Resources/Images/Assets/Icons/SocialMedia/LI-white.png" />
+                                                </p>
+                                                <p><span class="mc-variable General.LinkedIn variable">https://www.linkedin.com/in/agnieszka-fabisiak-190a955/</span>
+                                                </p>
+                                                <div style="text-align: justify;">
+                                                    <p style="font-size: 12pt;"><b>Disclaimer</b>:&#160;</p>
+                                                    <p style="font-size: 12pt;">Any information presented in this guide is accurate as at 16 April 2023. While the author has made every effort to present accurate information, any liability for potential errors and omissions is excluded.</p>
                                                 </div>
                                             </div>
                                         </div>
