--- a/A-What you need to know/Fiscal cash register.htm
+++ b/A-What you need to know/Fiscal cash register.htm
@@ -222,15 +222,16 @@
                                                 <img src="../Resources/Images/kasa fiskalna_384x250.jpg" style="width: 384;height: 250;" />
                                             </p>
                                             <h2>When a fiscal cash register is required</h2>
-                                            <p>You will need to have a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a>, if you sell your goods or services to:</p>
+                                            <p>You will need to have a fiscal cash register, if you sell your goods or services to:</p>
                                             <ul>
                                                 <li>natural persons who do not run a business activity</li>
                                                 <li>farmers that sell agricultural products produced by them, who are exempt from VAT</li>
                                             </ul>
                                             <div>
-                                                <p>If you are required to use a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a>, you will be also required to have a payment card terminal, so that your clients can pay with a payment card.</p>
+                                                <p>If you are required to use a fiscal cash register, you will be also required to have a payment card terminal, so that your clients can pay with a payment card.</p>
+                                                <p>&#160;</p>
                                             </div>
-                                            <h3>When you are exempt from the obligation to have a fiscal cash register.</h3>
+                                            <p>When you are exempt from the obligation to have a fiscal cash register:</p>
                                             <ul>
                                                 <li>when you sell specified types of goods or services</li>
                                                 <li>when the value of your sales to natural persons and farmers referred to above did not exceed PLN 20,000 in the previous fiscal year.</li>
@@ -239,7 +240,7 @@
                                                 <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
                                                 <p>This exemption does not apply, if you sell goods or services that are subject to registration requirement.</p>
                                             </div>
-                                            <p>You are required to have a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a>, if you:</p>
+                                            <p>You are required to have a fiscal cash register, if you:</p>
                                             <ul>
                                                 <li>sell the following goods:</li>
                                             </ul>
@@ -248,11 +249,11 @@
                                                 <li>provide the following services:</li>
                                             </ul>
                                             <p>taxi services, repair of motors and motor bikes, tax advisory services, catering, including seasonal catering, hairdressing and barbering, beauty care and cosmetology</p>
-                                            <p>The list below is an example only. The full list of goods and services that require using a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a> is available <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002442" target="_blank">here.</a></p>
+                                            <p>The list below is an example only. The full list of goods and services that require using a fiscal cash register is available <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002442" target="_blank">here.</a></p>
                                             <p>&#160;</p>
                                             <div class="Remember">
                                                 <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p>If you are starting a business activity and expect that your sales to natural persons and farmers will not exceed PLN 20,000, you do not need to have a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a>. Once you exceed this limit, you will have two months before you become obliged to have a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a>.</p>
+                                                <p>If you are starting a business activity and expect that your sales to natural persons and farmers will not exceed PLN 20,000, you do not need to have a fiscal cash register. Once you exceed this limit, you will have two months before you become obliged to have a fiscal cash register.</p>
                                             </div>
                                             <h2>Where to buy a cash register</h2>
                                             <p>You can buy a cash register from an authorised entity only. Such providers are licensed by the Ministry of Finance. They are subject to the duty of registration and are required to meet certain conditions.</p>
@@ -260,7 +261,7 @@
                                             <div class="Action">
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
                                                 <ol>
-                                                    <li value="1">Check if you are required to use a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a>.</li>
+                                                    <li value="1">Check if you are required to use a fiscal cash register.</li>
                                                     <li value="2">If you are, search for a service provider that will help you with the process.</li>
                                                 </ol>
                                             </div>
