--- a/A-What you need to know/License.htm
+++ b/A-What you need to know/License.htm
@@ -240,7 +240,7 @@
                                                 <li style="text-align: justify;">running casinos</li>
                                                 <li style="text-align: justify;">air transport</li>
                                             </ul>
-                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for a licence. The detailed list of activities for which a licence is required is available <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://pliki.biznes.gov.pl/biznes-pl/20221213/lista_uprawnien_upd12-2022.pdf" target="_blank">here</a>. </p>
+                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for a licence. The detailed list of activities for which a licence is required is available <a href="file:///C:/Users/afabi/OneDrive/Desktop/lista_uprawnien_upd12-2022.pdf#lista_uprawnien_upd12-2022.indd:.5493:252" target="_blank">here</a>. </p>
                                             <h2>A permit</h2>
                                             <p style="text-align: justify;">A given activity requires a permit when it is so stated in relevant legal regulations. A permit is issued, when a potential business person is found to have abilities and technical and organizational capacities to run a particular type of business. This means that specific conditions determined by law must be met.</p>
                                             <p style="text-align: justify;">A permit is issued in the form of an administrative decision that may introduce special conditions to be met.</p>
@@ -255,7 +255,7 @@
                                                 <li style="text-align: justify;">trade in products subject to excise duty</li>
                                                 <li style="text-align: justify;">waste collection and processing</li>
                                             </ul>
-                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for a permit. The detailed list of activities for which a permit is required is available <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://pliki.biznes.gov.pl/biznes-pl/20221213/lista_uprawnien_upd12-2022.pdf" target="_blank">here</a>.</p>
+                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for a permit. The detailed list of activities for which a permit is required is available <a href="file:///C:/Users/afabi/OneDrive/Desktop/lista_uprawnien_upd12-2022.pdf#lista_uprawnien_upd12-2022.indd:.5493:252" target="_blank">here</a>.</p>
                                             <h2>An entry in the register of regulated activities</h2>
                                             <p style="text-align: justify;">This is the simplest form of regulating business activity in Poland. To be entered in the relevant register, you need to:</p>
                                             <ul>
@@ -279,7 +279,7 @@
                                                 <li style="text-align: justify;">organising tourist events</li>
                                                 <li style="text-align: justify;">telecommunications</li>
                                             </ul>
-                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for an entry in the register of regulated activities. The detailed list of activities for which an entry is required is available <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://pliki.biznes.gov.pl/biznes-pl/20221213/lista_uprawnien_upd12-2022.pdf" target="_blank">here</a>. </p>
+                                            <p style="text-align: justify;">If your activity falls within any of the above categories, check whether you need to apply for an entry in the register of regulated activities. The detailed list of activities for which an entry is required is available <a href="file:///C:/Users/afabi/OneDrive/Desktop/lista_uprawnien_upd12-2022.pdf" target="_blank">here</a>. </p>
                                             <p style="text-align: justify;">An entity holding a register of regulated activities can refuse an entry, when:</p>
                                             <ul>
                                                 <li style="text-align: justify;">a final court order was issued that prohibits you to run the business activity in question</li>
