--- a/A-What you need to know/Registration.htm
+++ b/A-What you need to know/Registration.htm
@@ -239,7 +239,7 @@
                                             <p>&#160;</p>
                                             <div class="Remember">
                                                 <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p>You can run an <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">unregistered business activity<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Unregistered business activity is a small-size business activity, where the monthly revenue does not exceed a specified limit. It is not subject to the requirement of registration.</span></a> while working under an employment contract. This is a good and safe way to test your business in a safe environment, without quitting your permanent job.</p>
+                                                <p>You can run an unregistered business activity while working under an employment contract. This is a good and safe way to test your business in a safe environment, without quitting your permanent job.</p>
                                             </div>
                                             <p>Advantages:</p>
                                             <ul>
@@ -247,7 +247,7 @@
                                                 <li>You do not pay social and health insurance contributions. If you operate under a mandate agreement (<i>umowa zlecenie</i>), your client will be responsible for paying any social insurance contributions.</li>
                                                 <li>You do not need to pay monthly tax advances. Your yearly income will be included in your annual tax declaration PIT-36.</li>
                                                 <li>You do not need to keep full accounting records. A simplified sales register will be sufficient.</li>
-                                                <li>	As a result, an <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">unregistered business activity<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Unregistered business activity is a small-size business activity, where the monthly revenue does not exceed a specified limit. It is not subject to the requirement of registration.</span></a> is exempt from VAT, except for some types of activity that require a VAT status regardless of revenues. See here for details.</li>
+                                                <li>	As a result, an unregistered business activity is exempt from VAT, except for some types of activity that require a VAT status regardless of revenues. See here for details.</li>
                                             </ul>
                                             <p>What are your duties:</p>
                                             <ul>
@@ -262,10 +262,10 @@
                                             <p>&#160;</p>
                                             <div class="Action">
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
-                                                <p>Estimate your expected earnings to see if you can operate an <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">unregistered business activity<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Unregistered business activity is a small-size business activity, where the monthly revenue does not exceed a specified limit. It is not subject to the requirement of registration.</span></a></p>
+                                                <p>Estimate your expected earnings to see if you can operate an unregistered business activity</p>
                                             </div>
                                             <h2>When registration is required</h2>
-                                            <p>If you started your business activity as an unregistered one, you need to monitor your revenues .Once they exceed the limit (see <a href="#limit">here</a>) in a given month, you have 7 business days to register your activity with <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>.</p>
+                                            <p>If you started your business activity as an unregistered one, you need to monitor your revenues .Once they exceed the limit (see <a href="#limit">here</a>) in a given month, you have 7 business days to register your activity with CEIDG.</p>
                                             <div class="Action">
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
                                                 <ol>
