--- a/B-What you need to choose/Name for your business.htm
+++ b/B-What you need to choose/Name for your business.htm
@@ -232,7 +232,6 @@
                                             <ul>
                                                 <li>The spelling must be the same as in your ID document, except that you do not need to use capital letters only. Remember that capitalization should be correct.</li>
                                             </ul>
-                                            <p>&#160;</p>
                                             <div class="Example">
                                                 <p data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>Possible options are:</p>
                                                 <ul>
@@ -244,7 +243,6 @@
                                             <ul>
                                                 <li>If used within a phrase in Polish, it should be in a nominative case.</li>
                                             </ul>
-                                            <p>&#160;</p>
                                             <div class="Example">
                                                 <p data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>&#160;</p>
                                                 <p>John Doe Nauka angielskiego,</p>
@@ -263,10 +261,9 @@
                                             <p>&#160;</p>
                                             <p style="text-align: justify;">You can add elements of your name in English (or any other language), but it is recommended to keep them short and simple. You will need to dictate the name of your business to your partners (for example, when you are asking for an invoice), so long and difficult names can cause problems.</p>
                                             <p style="text-align: justify;">John Doe Nauka angielskiego is better than *John Doe Professional English Instruction</p>
-                                            <p>&#160;</p>
                                             <div class="Remember">
                                                 <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p>You can have only one entry in <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a> for your first name and last name, but you can run various types of business under this single entry.</p>
+                                                <p>You can have only one entry in CEIDG for your first name and last name, but you can run various types of business under this single entry.</p>
                                             </div>
                                             <p>&#160;</p>
                                             <div class="Action">
