--- a/B-What you need to choose/PKD code.htm
+++ b/B-What you need to choose/PKD code.htm
@@ -229,7 +229,7 @@
                                             <p style="text-align: justify;">If you change the scope or nature of your business, you are required to update the codes within 7 days of such change. See here for details.</p>
                                             <div class="Remember">
                                                 <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span> </p>
-                                                <p style="text-align: justify;">Certain codes are reserved for individual farmers or for commercial law companies, and you cannot choose them. Always check the <a href="https://www.biznes.gov.pl/pl/tabela-pkd">PKD website</a>.</p>
+                                                <p style="text-align: justify;">Certain codes are reserved for individual farmers or for commercial law companies, and you cannot choose them. Always check the <a href="https://www.biznes.gov.pl/pl/tabela-pkd" target="_blank">PKD website</a>.</p>
                                             </div>
                                             <h2>Where to find the codes</h2>
                                             <p style="text-align: justify;">Use the search page available at&#160;<a href="https://www.biznes.gov.pl/pl/tabela-pkd">Biznes.gov.pl</a></p>
