--- a/B-What you need to choose/VAT.htm
+++ b/B-What you need to choose/VAT.htm
@@ -249,7 +249,8 @@
                                                     <p class="Akapitzlistą_7" style="text-align: justify;">Once you start business, you need to monitor your sales, to be aware of when the limit is exceeded. Then you will be required to register for VAT. </p>
                                                     <p class="Akapitzlistą_7" style="text-align: justify;">The above limit is an annual one. If you start your business in mid-year, it shall be calculated proportionally. </p>
                                                     <div class="Example">
-                                                        <p class="Akapitzlistą_7" style="text-align: justify;" data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>For example, if you start business on 1 July, your proportionate limit will be PLN 100,000 (corresponding to the 6 months that you will be in business).</p>
+                                                        <p class="Akapitzlistą_7" style="text-align: justify;" data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span> </p>
+                                                        <p class="Akapitzlistą_7" style="text-align: justify;">If you start business on 1 July, your proportionate limit will be PLN 100,000 (corresponding to the 6 months that you will be in business).</p>
                                                     </div>
                                                 </li>
                                                 <li class="Akapitzlistą_1">
