--- a/Express path/Access to form.htm
+++ b/Express path/Access to form.htm
@@ -232,13 +232,21 @@
                                                             <li value="1">Go to website <a href="https://www.biznes.gov.pl/pl" target="_blank">Biznes.gov.pl</a></li>
                                                             <li value="2">Click the button "Zarejestruj firmę" (Register your business)<br /><img src="../Resources/Images/access1_555x346.png" style="width: 555;height: 346;" /></li>
                                                             <li value="3">Click the button "Rozpocznij"&#160;(Start)<br /><img src="../Resources/Images/access2_528x256.png" style="width: 528;height: 256;" /></li>
-                                                            <li value="4">You will have two login options:<ul><li>Zaloguj się przez Login.gov.pl (Log in via Login.gov.pl)</li><li>Zaloguj się przez e-mail (Log in using our e-mail)</li></ul></li>
-                                                        </ol>
-                                                        <p>Choose the one that you want to use.</p>
+                                                            <li value="4">You will have two login options:<ul><li>Zaloguj się przez Login.gov.pl (Log in via Login.gov.pl)</li><li>Zaloguj się przez e-mail (Log in using our e-mail) </li></ul></li>
+                       Choose the one that you want to use.
+                            <img src="../Resources/Images/access3_638x517.png" style="width: 638;height: 517;" /><li value="5">You will be asked to give your e-mail address. Any information from biznes.gov, including a confirmation of submitting your registration application, will be sent to this e-mail address. Give your valid e-email address.</li><li value="6">&#160;You will see this page. It gives you a brief information on how to register a business. It also says that registering a business in Poland is free of charge. Click "Dalej"&#160;(Next).</li></ol>
+                                                        <div class="Remember">
+                                                            <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                                            <p> If you are asked to make any payment, beware - you might have been redirected to a fake page.</p>
+                                                        </div>
+                                                        <p>
+                                                            <img src="../Resources/Images/access6.png" />
+                                                        </p>
                                                         <p>
                                                             <br />
-                                                            <img src="../Resources/Images/access3_638x517.png" style="width: 638;height: 517;" />
                                                         </p>
+                                                        <p>&#160;</p>
+                                                        <p>You have reached the registration form online.</p>
                                                     </div>
                                                 </div>
                                                 <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />If you do not have any of the above methods of confirming your identity, you will need to prepare a paper version of your application. Follow these steps:</a></span>
@@ -253,8 +261,8 @@
                                                             <li>fill it in the Acrobat, using the "Fill in and sign" function. Then print it. </li>
                                                         </ul>
                                                         <div class="Remember">
-                                                            <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>Do not sign it! &#160;You will need to sign it in the presence of an officer or a notary!</p>
-                                                            <p>&#160;</p>
+                                                            <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                                            <p>Do not sign it yet!&#160;You will need it to sign it in the presence of an officer.</p>
                                                         </div>
                                                     </div>
                                                 </div>
