--- a/B-What you need to choose/Taxation form.htm
+++ b/B-What you need to choose/Taxation form.htm
@@ -234,14 +234,14 @@
                                             <p style="text-align: justify;">This is a simplified form of taxation,  where you pay tax at a specified rate (from 2% to 17%) on your registered income in a given month.</p>
                                             <div class="Remember">
                                                 <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p>Lump sum on registered income taxation is available for specific types of activity only. For example, this taxation form cannot be applied, when you run a pharmacy, trade in currencies, or sell car parts. Check here for details.</p>
+                                                <p>Lump sum on registered income taxation is available for specific types of activity only. For example, this taxation form cannot be applied, when you run a pharmacy, trade in currencies, or sell car parts. </p>
                                             </div>
                                             <h2>Comparison of taxation forms</h2>
                                             <p>Before you choose the taxation form, compare them.</p>
                                             <table style="width: 100%;mc-table-style: url('../Resources/Stylesheets/Alternate-Row-Color.css');margin-left: 0;margin-right: auto;" class="TableStyle-Alternate-Row-Color" cellspacing="21">
-                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 407px;" />
+                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 373px;" />
                                                 <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
-                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
+                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 147px;" />
                                                 <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
                                                 <thead>
                                                     <tr class="TableStyle-Alternate-Row-Color-Head-Header1">
@@ -462,13 +462,13 @@
                                                 </tbody>
                                             </table>
                                             <p>*)  <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term10">Podatkowa Księga Przychodów i Rozchodów<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Podatkowa Księga Przychodów i Rozchodów, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only.</span></a>, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only. It should be kept for each year separately, either on paper or in electronic form.</p>
-                                            <p>You can see a template <a href="http://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20190002544">here.</a></p>
+                                            <p>You can see a template <a href="http://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20190002544" target="_blank">here.</a></p>
                                             <div class="Remember">
                                                 <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
                                                 <p>Once your annual revenue exceeds EUR 2 million, you are required to maintain full accounting (accounting ledgers)</p>
                                             </div>
                                             <p><a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term11">Revenue register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Revenue register – it is a register of your revenues, you can keep it on paper or in electronic form, separately for each year</span></a> – is a register of your revenues, you can keep it on paper or in electronic form, separately for each year.</p>
-                                            <p>The template is available <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002414&amp;SessionID=2BE7F0DBAE558A65624E78E789E9B29882BBFF14">here</a>.</p>
+                                            <p>The template is available <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002414&amp;SessionID=2BE7F0DBAE558A65624E78E789E9B29882BBFF14" target="_blank">here</a>.</p>
                                             <div class="Action">
                                                 <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
                                                 <ol>
